--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.version>17</maven.compiler.version>
-        <fxgl.version>17+dev-SNAPSHOT</fxgl.version>
+        <fxgl.version>17</fxgl.version>
         <compiler.plugin.version>3.8.1</compiler.plugin.version>
         <javafx.plugin.version>0.0.8</javafx.plugin.version>
     </properties>
@@ -60,10 +60,4 @@
         </plugins>
     </build>
 
-    <repositories>
-        <repository>
-            <id>oss.sonatype.org-snapshot</id>
-            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
-        </repository>
-    </repositories>
 </project>
