--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Set up JDK 17
         uses: actions/setup-java@v2
         with:
-          java-version: '17.0.2'
+          java-version: '17.0.1+12'
           distribution: 'adopt-hotspot'
           cache: maven
       - name: Build with Maven
@@ -40,7 +40,7 @@ jobs:
       - name: Set up JDK 17
         uses: actions/setup-java@v2
         with:
-          java-version: '17.0.2'
+          java-version: '17.0.1+12'
           distribution: 'adopt-hotspot'
           cache: maven
       - name: Build with Maven
@@ -60,7 +60,7 @@ jobs:
       - name: Set up JDK 17
         uses: actions/setup-java@v2
         with:
-          java-version: '17.0.2'
+          java-version: '17.0.1+12'
           distribution: 'adopt-hotspot'
           cache: maven
       - name: Build with Maven
