--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,10 +17,10 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - name: Set up JDK 17
+      - name: Set up JDK
         uses: actions/setup-java@v2
         with:
-          java-version: '17.0.2+8'
+          java-version: '17'
           distribution: 'adopt-hotspot'
           check-latest: true
       - name: Build with Maven
@@ -37,10 +37,10 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - name: Set up JDK 17
+      - name: Set up JDK
         uses: actions/setup-java@v2
         with:
-          java-version: '17.0.1+12'
+          java-version: '17'
           distribution: 'adopt-hotspot'
           check-latest: true
       - name: Build with Maven
@@ -57,10 +57,10 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - name: Set up JDK 17
+      - name: Set up JDK
         uses: actions/setup-java@v2
         with:
-          java-version: '17.0.1+12'
+          java-version: '17'
           distribution: 'adopt-hotspot'
           check-latest: true
       - name: Build with Maven
