--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,11 +18,10 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Set up JDK
-        uses: actions/setup-java@v2
+        uses: oracle-actions/setup-java@v1
         with:
-          java-version: '17'
-          distribution: 'adopt-hotspot'
-          check-latest: true
+          website: jdk.java.net
+          release: 18
       - name: Build with Maven
         run: mvn javafx:jlink
       - uses: actions/upload-artifact@v2
@@ -38,11 +37,10 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Set up JDK
-        uses: actions/setup-java@v2
+        uses: oracle-actions/setup-java@v1
         with:
-          java-version: '17'
-          distribution: 'adopt-hotspot'
-          check-latest: true
+          website: jdk.java.net
+          release: 18
       - name: Build with Maven
         run: mvn javafx:jlink
       - uses: actions/upload-artifact@v2
@@ -58,11 +56,10 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Set up JDK
-        uses: actions/setup-java@v2
+        uses: oracle-actions/setup-java@v1
         with:
-          java-version: '17'
-          distribution: 'adopt-hotspot'
-          check-latest: true
+          website: jdk.java.net
+          release: 18
       - name: Build with Maven
         run: mvn javafx:jlink
       - uses: actions/upload-artifact@v2
