--- a/pom.xml
+++ b/pom.xml
@@ -12,8 +12,8 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.version>18</maven.compiler.version>
-        <fxgl.version>17.2</fxgl.version>
+        <maven.compiler.version>19</maven.compiler.version>
+        <fxgl.version>17+dev-SNAPSHOT</fxgl.version>
         <compiler.plugin.version>3.10.1</compiler.plugin.version>
         <javafx.plugin.version>0.0.8</javafx.plugin.version>
     </properties>
@@ -60,4 +60,10 @@
         </plugins>
     </build>
 
+    <repositories>
+        <repository>
+            <id>oss.sonatype.org-snapshot</id>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+        </repository>
+    </repositories>
 </project>
