--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,14 +18,14 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Set up JDK
-#         uses: oracle-actions/setup-java@v1
-#         with:
-#           website: jdk.java.net
-#           release: 19
-        uses: graalvm/setup-graalvm@v1
+        uses: oracle-actions/setup-java@v1
         with:
-          version: 'latest'
-          java-version: '19'
+          website: jdk.java.net
+          release: 19
+#         uses: graalvm/setup-graalvm@v1
+#         with:
+#           version: 'latest'
+#           java-version: '19'
       - name: Build with Maven
         run: mvn javafx:jlink
       - uses: actions/upload-artifact@v3
@@ -41,14 +41,14 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Set up JDK
-#         uses: oracle-actions/setup-java@v1
-#         with:
-#           website: jdk.java.net
-#           release: 19
-        uses: graalvm/setup-graalvm@v1
+        uses: oracle-actions/setup-java@v1
         with:
-          version: 'latest'
-          java-version: '19'
+          website: jdk.java.net
+          release: 19
+#         uses: graalvm/setup-graalvm@v1
+#         with:
+#           version: 'latest'
+#           java-version: '19'
       - name: Build with Maven
         run: mvn javafx:jlink
       - uses: actions/upload-artifact@v3
@@ -64,14 +64,14 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Set up JDK
-#         uses: oracle-actions/setup-java@v1
-#         with:
-#           website: jdk.java.net
-#           release: 19
-        uses: graalvm/setup-graalvm@v1
+        uses: oracle-actions/setup-java@v1
         with:
-          version: 'latest'
-          java-version: '19'
+          website: jdk.java.net
+          release: 19
+#         uses: graalvm/setup-graalvm@v1
+#         with:
+#           version: 'latest'
+#           java-version: '19'
       - name: Build with Maven
         run: mvn javafx:jlink
       - uses: actions/upload-artifact@v3
