--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,16 +18,16 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Set up JDK
-#         uses: oracle-actions/setup-java@v1
-#         with:
-#           website: jdk.java.net
-#           release: 20
-        uses: graalvm/setup-graalvm@v1
+        uses: oracle-actions/setup-java@v1
         with:
-          version: 'latest'
-          java-version: '20.0.2'
-          distribution: 'graalvm-community'
-          github-token: ${{ secrets. GITHUB_TOKEN }}
+          website: jdk.java.net
+          release: 21
+#        uses: graalvm/setup-graalvm@v1
+#        with:
+#          version: 'latest'
+#          java-version: '20.0.2'
+#          distribution: 'graalvm-community'
+#          github-token: ${{ secrets. GITHUB_TOKEN }}
       - name: Build with Maven
         run: mvn javafx:jlink
       - uses: actions/upload-artifact@v3
@@ -43,16 +43,16 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Set up JDK
-#        uses: oracle-actions/setup-java@v1
-#        with:
-#          website: jdk.java.net
-#          release: 20
-        uses: graalvm/setup-graalvm@v1
+        uses: oracle-actions/setup-java@v1
         with:
-          version: 'latest'
-          java-version: '20.0.2'
-          distribution: 'graalvm-community'
-          github-token: ${{ secrets. GITHUB_TOKEN }}
+          website: jdk.java.net
+          release: 21
+#        uses: graalvm/setup-graalvm@v1
+#        with:
+#          version: 'latest'
+#          java-version: '20.0.2'
+#          distribution: 'graalvm-community'
+#          github-token: ${{ secrets. GITHUB_TOKEN }}
       - name: Build with Maven
         run: mvn javafx:jlink
       - uses: actions/upload-artifact@v3
@@ -68,16 +68,16 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Set up JDK
-#        uses: oracle-actions/setup-java@v1
-#        with:
-#          website: jdk.java.net
-#          release: 20
-        uses: graalvm/setup-graalvm@v1
+        uses: oracle-actions/setup-java@v1
         with:
-          version: 'latest'
-          java-version: '20.0.2'
-          distribution: 'graalvm-community'
-          github-token: ${{ secrets. GITHUB_TOKEN }}
+          website: jdk.java.net
+          release: 21
+#        uses: graalvm/setup-graalvm@v1
+#        with:
+#          version: 'latest'
+#          java-version: '20.0.2'
+#          distribution: 'graalvm-community'
+#          github-token: ${{ secrets. GITHUB_TOKEN }}
       - name: Build with Maven
         run: mvn javafx:jlink
       - uses: actions/upload-artifact@v3
