--- a/pom.xml
+++ b/pom.xml
@@ -12,10 +12,12 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.version>20</maven.compiler.version>
+        <maven.compiler.version>21</maven.compiler.version>
         <fxgl.version>17.3</fxgl.version>
         <compiler.plugin.version>3.11.0</compiler.plugin.version>
         <javafx.plugin.version>0.0.8</javafx.plugin.version>
+        <atlantafx.version>2.0.1</atlantafx.version>
+        <litfx.version>0.1.3</litfx.version>
     </properties>
 
     <dependencies>
@@ -27,7 +29,12 @@
         <dependency>
             <groupId>io.github.mkpaz</groupId>
             <artifactId>atlantafx-base</artifactId>
-            <version>2.0.1</version>
+            <version>${atlantafx.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.birdasaur.litfx</groupId>
+            <artifactId>litfx-core</artifactId>
+            <version>${litfx.version}</version>
         </dependency>
     </dependencies>
 
