--- a/pom.xml
+++ b/pom.xml
@@ -15,27 +15,33 @@
         <compiler.plugin.version>3.11.0</compiler.plugin.version>
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
-        <fxgl.version>17.3</fxgl.version>
         <javafx.plugin.version>0.0.8</javafx.plugin.version>
-        <atlantafx.version>2.0.1</atlantafx.version>
-        <litfx.version>0.1.3</litfx.version>
+<!--        <fxgl.version>17.3</fxgl.version>-->
+<!--        <atlantafx.version>2.0.1</atlantafx.version>-->
+<!--        <litfx.version>0.1.3</litfx.version>-->
+        <fxcity.version>0.0.3</fxcity.version>
     </properties>
 
     <dependencies>
+<!--        <dependency>-->
+<!--            <groupId>com.github.almasb</groupId>-->
+<!--            <artifactId>fxgl</artifactId>-->
+<!--            <version>${fxgl.version}</version>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>io.github.mkpaz</groupId>-->
+<!--            <artifactId>atlantafx-base</artifactId>-->
+<!--            <version>${atlantafx.version}</version>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>com.github.birdasaur.litfx</groupId>-->
+<!--            <artifactId>litfx-core</artifactId>-->
+<!--            <version>${litfx.version}</version>-->
+<!--        </dependency>-->
         <dependency>
-            <groupId>com.github.almasb</groupId>
-            <artifactId>fxgl</artifactId>
-            <version>${fxgl.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>io.github.mkpaz</groupId>
-            <artifactId>atlantafx-base</artifactId>
-            <version>${atlantafx.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.github.birdasaur.litfx</groupId>
-            <artifactId>litfx-core</artifactId>
-            <version>${litfx.version}</version>
+            <groupId>io.github.chengenzhao</groupId>
+            <artifactId>fxcity</artifactId>
+            <version>${fxcity.version}</version>
         </dependency>
     </dependencies>
 
