--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
         <javafx.plugin.version>0.0.8</javafx.plugin.version>
-        <fxcity.version>0.1.2</fxcity.version>
+        <fxcity.version>0.1.3</fxcity.version>
     </properties>
 
     <dependencies>
@@ -25,6 +25,21 @@
             <artifactId>fxcity</artifactId>
             <version>${fxcity.version}</version>
         </dependency>
+<!--        <dependency>-->
+<!--            <groupId>io.vproxy</groupId>-->
+<!--            <artifactId>vfx</artifactId>-->
+<!--            <version>1.3.5</version>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>org.openjfx</groupId>-->
+<!--            <artifactId>javafx-swing</artifactId>-->
+<!--            <version>21.0.1</version>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>io.vproxy</groupId>-->
+<!--            <artifactId>vjson</artifactId>-->
+<!--            <version>1.5.4-jdk9</version>-->
+<!--        </dependency>-->
     </dependencies>
 
     <build>
