--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,7 +22,7 @@ jobs:
         # with:
         #   website: jdk.java.net
         #   release: 21
-        uses: graalvm/setup-graalvm@v1
+        uses: graalvm/setup-graalvm@v1.1.6
         with:
          version: 'latest'
          java-version: '21'
@@ -38,7 +38,7 @@ jobs:
 
   mac-build:
 
-    runs-on: macos-latest
+    runs-on: macos-14
 
     steps:
       - uses: actions/checkout@v4
@@ -47,7 +47,7 @@ jobs:
        # with:
        #   website: jdk.java.net
        #   release: 21
-        uses: graalvm/setup-graalvm@v1
+        uses: graalvm/setup-graalvm@v1.1.6
         with:
           version: 'latest'
           java-version: '21'
@@ -72,7 +72,7 @@ jobs:
         # with:
         #   website: jdk.java.net
         #   release: 21
-        uses: graalvm/setup-graalvm@v1
+        uses: graalvm/setup-graalvm@v1.1.6
         with:
          version: 'latest'
          java-version: '21'
