--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,10 +24,8 @@ jobs:
 #          release: 23
         uses: actions/setup-java@v4
         with:
-#         version: 'latest'
          java-version: '23'
          distribution: 'graalvm'
-#         github-token: ${{ secrets. GITHUB_TOKEN }}
       - name: Build with Maven
         run: mvn javafx:jlink
       - uses: actions/upload-artifact@v4
@@ -43,16 +41,14 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Set up JDK
-        uses: oracle-actions/setup-java@v1
+#        uses: oracle-actions/setup-java@v1
+#        with:
+#         website: jdk.java.net
+#         release: 23
+        uses: actions/setup-java@v4
         with:
-         website: jdk.java.net
-         release: 23
-        # uses: graalvm/setup-graalvm@v1
-        # with:
-        #   version: 'latest'
-        #   java-version: '22'
-        #   distribution: 'graalvm-community'
-        #   github-token: ${{ secrets. GITHUB_TOKEN }}
+          java-version: '23'
+          distribution: 'graalvm'
       - name: Build with Maven
         run: mvn javafx:jlink
       - uses: actions/upload-artifact@v4
@@ -68,16 +64,14 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Set up JDK
-        uses: oracle-actions/setup-java@v1
+#        uses: oracle-actions/setup-java@v1
+#        with:
+#          website: jdk.java.net
+#          release: 23
+        uses: actions/setup-java@v4
         with:
-          website: jdk.java.net
-          release: 23
-        # uses: graalvm/setup-graalvm@v1
-        # with:
-        #  version: 'latest'
-        #  java-version: '22'
-        #  distribution: 'graalvm-community'
-        #  github-token: ${{ secrets. GITHUB_TOKEN }}
+          java-version: '23'
+          distribution: 'graalvm'
       - name: Build with Maven
         run: mvn javafx:jlink
       - uses: actions/upload-artifact@v4
