--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,15 +18,15 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Set up JDK
-#        uses: oracle-actions/setup-java@v1
-#        with:
-#          website: jdk.java.net
-#          release: 24
-        uses: actions/setup-java@v4
+        uses: oracle-actions/setup-java@v1
         with:
-         java-version: '24'
-         distribution: 'graalvm'
-         check-latest: true
+          website: jdk.java.net
+          release: 24
+#        uses: actions/setup-java@v4
+#        with:
+#         java-version: '24'
+#         distribution: 'graalvm'
+#         check-latest: true
       - name: Build with Maven
         run: mvn javafx:jlink
       - uses: actions/upload-artifact@v4
@@ -42,15 +42,15 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Set up JDK
-#        uses: oracle-actions/setup-java@v1
-#        with:
-#         website: jdk.java.net
-#         release: 24
-        uses: actions/setup-java@v4
+        uses: oracle-actions/setup-java@v1
         with:
-          java-version: '24'
-          distribution: 'graalvm'
-          check-latest: true
+         website: jdk.java.net
+         release: 24
+#        uses: actions/setup-java@v4
+#        with:
+#          java-version: '24'
+#          distribution: 'graalvm'
+#          check-latest: true
       - name: Build with Maven
         run: mvn javafx:jlink
       - uses: actions/upload-artifact@v4
@@ -66,15 +66,15 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Set up JDK
-#        uses: oracle-actions/setup-java@v1
-#        with:
-#          website: jdk.java.net
-#          release: 24
-        uses: actions/setup-java@v4
+        uses: oracle-actions/setup-java@v1
         with:
-          java-version: '24'
-          distribution: 'graalvm'
-          check-latest: true
+          website: jdk.java.net
+          release: 24
+#        uses: actions/setup-java@v4
+#        with:
+#          java-version: '24'
+#          distribution: 'graalvm'
+#          check-latest: true
       - name: Build with Maven
         run: mvn javafx:jlink
       - uses: actions/upload-artifact@v4
